Bug squashes and styling

--- a/odds-converter.css
+++ b/odds-converter.css
@@ -1,1 +1,2 @@
-/* CSS declarations go here */
+body { background: #fdfdfd; }
+h1 { color: #6f9c00; }
